# firefly

./: CMakeLists.txt  README.md  example.cpp  ff_insert.cpp  firefly.cpp  meson.build
benchmarks/: benchmarks.cpp  benchmarks_no_bt.cpp
cmake/: FindGMP.cmake
source/: AmplitudeParser.cpp  BaseReconst.cpp  FFInt.cpp  ParserUtils.cpp  Poly.cpp  PolyReconst.cpp  Polynomial.cpp  PolynomialFF.cpp  RatReconst.cpp  RationalNumber.cpp  ShuntingYardParser.cpp  utils.cpp
source/include/firefly/: AmplitudeParser.hpp  BaseReconst.hpp  BlackBoxBase.hpp  FFInt.hpp  MPIWorker.hpp  Poly.hpp  PolynomialFF.hpp  RatReconst.hpp  RationalNumber.hpp  Reconstructor.hpp  ShuntingYardParser.hpp  Tests.hpp  ThreadPool.hpp  config.hpp.in  meson.build  utils.hpp
test/: CMakeLists.txt  test_bunch.cpp  test_normal.cpp  test_safe.cpp  test_save_read.cpp  test_save_write.cpp
