include_directories(${INCLUDE_PATH}/test)
add_definitions(-DDOCTEST_CONFIG_IMPLEMENT_WITH_MAIN)

set(LIBS FireFly_static ${LIBS})

function(add_firefly_test name)
  if("${name}" STREQUAL "test_normal" OR "${name}" STREQUAL "test_save_read" OR "${name}" STREQUAL "test_save_write")
    add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
  else()
    add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
  endif()
  target_link_libraries(${name} ${LIBS})
  add_test(NAME ${name} COMMAND ${name})
  add_dependencies(check ${name})
endfunction()

add_firefly_test(test_bunch)
add_firefly_test(test_normal)
add_firefly_test(test_safe)
add_firefly_test(test_save_write)
add_firefly_test(test_save_read)
